--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "mongodb": "^3.0.7"
+    "mongodb": "^3.0.7",
+    "path": "^0.12.7"
+  },
+  "engines": {
+    "node": "8.11.1",
+    "npm": "6.0.0"
   }
 }
