--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "express": "^4.16.3",
     "mongodb": "^3.0.7",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pg": "^7.4.1",
+    "pg-promise": "^8.4.0"
   },
   "engines": {
     "node": "8.11.1",
