--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "preinstall": "npm install -g supervisor"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
-    "pg": "^7.4.1"
+    "pg": "^6.4.2"
   }
 }
